<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gamma.about.MainActivity"
    android:orientation="vertical"
    android:background="@color/grayLight">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="275dp">
        <ImageView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:src="@drawable/backg"
            android:scaleType="centerCrop"/>

            <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                >
                <ImageView
                    android:id="@+id/profile"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/profile"
                    android:layout_marginTop="16dp">
                </ImageView>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/name"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:paddingTop="8dp"
                    android:textColor="#fff"
                    />
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/career"
                    android:textSize="18dp"
                    android:textStyle="normal"
                    android:textColor="#fff"
                    android:paddingBottom="10dp"/>
            </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:gravity="center"
        android:orientation="horizontal"

        >
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            >
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_margin="10dp"
                >
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    app:srcCompat="@drawable/ic_instagram"
                    android:tint="@color/grayIcon"
                    ></ImageView>
                <TextView
                    android:id="@+id/instagram"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/instalink"
                    android:textSize="18dp"
                    android:textStyle="normal"
                    android:textColor="@color/grayIcon"
                    android:layout_marginTop="8dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:gravity="center"
                >
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    app:srcCompat="@drawable/ic_phone"
                    android:tint="@color/grayIcon"
                    ></ImageView>
                <TextView
                    android:id="@+id/phone"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/tellink"
                    android:textSize="18dp"
                    android:textStyle="normal"
                    android:textColor="@color/grayIcon"
                    android:layout_marginTop="8dp"/>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            >
            <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_margin="10dp"
                >
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    app:srcCompat="@drawable/ic_github"
                    android:tint="@color/grayIcon"
                    ></ImageView>
                <TextView
                    android:id="@+id/github"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/gitlink"
                    android:textSize="18dp"
                    android:textStyle="normal"
                    android:textColor="@color/grayIcon"
                    android:layout_marginTop="8dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:gravity="center"
                >
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    app:srcCompat="@drawable/ic_mail"
                    android:tint="@color/grayIcon"
                    ></ImageView>
                <TextView
                    android:id="@+id/mail"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/maillink"
                    android:textSize="18dp"
                    android:textStyle="normal"
                    android:textColor="@color/grayIcon"
                    android:layout_marginTop="10dp"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fashare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            app:fabSize="normal"
            app:srcCompat="@drawable/ic_share_black_24dp">

        </android.support.design.widget.FloatingActionButton>

        <TextView
            android:id="@+id/poweredby"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="Powered by GamaCorp"
            android:textAlignment="center"></TextView>
    </LinearLayout>

</LinearLayout>
